--- a/实例/全功能测试/Objects/全功能测试.build_log.htm
+++ b/实例/全功能测试/Objects/全功能测试.build_log.htm
@@ -18,7 +18,7 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
-C:\Users\Jackx\OneDrive\科研项目\蓝桥杯单片机\全功能测试\全功能测试.uvproj
+C:\Users\Jackx\Desktop\lanqiaobei_iap15f2k61s2_code\实例\全功能测试\全功能测试.uvproj
 Project File Date:  01/19/2026
 
 <h2>Output:</h2>
@@ -30,7 +30,7 @@ compiling sys.c...
 compiling led.c...
 compiling seg.c...
 linking...
-Program Size: data=9.0 xdata=0 code=102
+Program Size: data=20.1 xdata=0 code=709
 creating hex file from ".\Objects\全功能测试"...
 ".\Objects\全功能测试" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:01
