--- a/实例/全功能测试/Objects/全功能测试.build_log.htm
+++ b/实例/全功能测试/Objects/全功能测试.build_log.htm
@@ -30,11 +30,12 @@ compiling sys.c...
 compiling led.c...
 compiling seg.c...
 compiling key.c...
+compiling appled.c...
 linking...
-Program Size: data=37.1 xdata=0 code=1185
+Program Size: data=41.1 xdata=0 code=2023
 creating hex file from ".\Objects\全功能测试"...
 ".\Objects\全功能测试" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
