--- a/实例/全功能测试/Objects/全功能测试.build_log.htm
+++ b/实例/全功能测试/Objects/全功能测试.build_log.htm
@@ -32,10 +32,12 @@ compiling seg.c...
 compiling key.c...
 compiling appled.c...
 linking...
-Program Size: data=41.1 xdata=0 code=2023
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?GET_1S_FLAG?SYS
+Program Size: data=46.3 xdata=0 code=2156
 creating hex file from ".\Objects\全功能测试"...
-".\Objects\全功能测试" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:01
+".\Objects\全功能测试" - 0 Error(s), 1 Warning(s).
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
