--- a/实例/全功能测试/Objects/全功能测试.build_log.htm
+++ b/实例/全功能测试/Objects/全功能测试.build_log.htm
@@ -19,7 +19,7 @@ CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
 C:\Users\Jackx\Desktop\lanqiaobei_iap15f2k61s2_code\实例\全功能测试\全功能测试.uvproj
-Project File Date:  01/20/2026
+Project File Date:  01/21/2026
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
@@ -31,11 +31,13 @@ compiling led.c...
 compiling seg.c...
 compiling key.c...
 compiling appled.c...
+compiling appseg.c...
+compiling appkey.c...
 linking...
-Program Size: data=46.4 xdata=0 code=2245
+Program Size: data=47.4 xdata=0 code=3397
 creating hex file from ".\Objects\全功能测试"...
 ".\Objects\全功能测试" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
