--- a/框架/v2/Objects/v2框架.build_log.htm
+++ b/框架/v2/Objects/v2框架.build_log.htm
@@ -35,20 +35,22 @@ compiling app_main.c...
 compiling app_task_1.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_DRV_LED_SET?DRV_LED
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?DRV_LED_SET0?DRV_LED
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?DRV_SEG_SET0?DRV_SEG
+    SEGMENT: ?PR?_DRV_SEG_SET?DRV_SEG
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?_DRV_SEG_SET_ALL?DRV_SEG
+    SEGMENT: ?PR?DRV_SEG_SET0?DRV_SEG
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?DRV_KEY_GET?DRV_KEY
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_RELAY_SET?DRV_OTHER
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_BUZZ_SET?DRV_OTHER
-Program Size: data=71.1 xdata=0 code=1471
+Program Size: data=62.1 xdata=0 code=1378
 creating hex file from ".\Objects\v2¿ò¼Ü"...
-".\Objects\v2¿ò¼Ü" - 0 Error(s), 6 Warning(s).
+".\Objects\v2¿ò¼Ü" - 0 Error(s), 7 Warning(s).
 Build Time Elapsed:  00:00:02
 </pre>
 </body>
